--- a/.github/workflows/pre-released.yml
+++ b/.github/workflows/pre-released.yml
@@ -21,18 +21,21 @@ jobs:
   #    secrets: inherit
 
   pre_release_v1:
+    if: ${{ always() }}
     uses: zyfra/Prizm/.github/workflows/pre-release-publish-ng14.yml@main
     secrets: inherit
   #    needs: pre_beta_release_v1
 
   pre_release_v2:
     needs: pre_release_v1
+    if: ${{ always() }}
     uses: zyfra/Prizm/.github/workflows/pre-release-publish-ng15.yml@main
     secrets: inherit
   #    needs: pre_beta_release_v2
 
   pre_release_v3:
     needs: pre_release_v2
+    if: ${{ always() }}
     uses: zyfra/Prizm/.github/workflows/pre-release-publish-ng16.yml@main
     secrets: inherit
 #    needs: pre_beta_release_v3
