--- a/.github/workflows/released.yml
+++ b/.github/workflows/released.yml
@@ -28,10 +28,12 @@ jobs:
 
   release_v2:
     needs: release_v1
+    if: ${{ always() }}
     uses: zyfra/Prizm/.github/workflows/main-publish-ng15.yml@main
     secrets: inherit
 
   release_v3:
     needs: release_v2
+    if: ${{ always() }}
     uses: zyfra/Prizm/.github/workflows/main-publish-ng16.yml@main
     secrets: inherit
