--- a/.github/workflows/beta-publish-ng14.yml
+++ b/.github/workflows/beta-publish-ng14.yml
@@ -68,7 +68,7 @@ jobs:
         run: npx nx generate @prizm-ui/nx-plugin:update-version --updateInDependencies true --newVersion="1.*.*-ng14beta.up" --all --currentVersion="${{ env.LAST_DRAFT_VERSION }}"
 
       - name: 'Build beta versions'
-        run: npx nx run-many --target=build --all --parallel --max-parallel=3
+        run: npx nx run-many --target=build --all --parallel --max-parallel=3 --configuration development
 
       - name: Save dist in cache...
         id: dist-cache-save
