feat: cache to artifacts

--- a/.github/workflows/main-publish-ng14.yml
+++ b/.github/workflows/main-publish-ng14.yml
@@ -68,23 +68,15 @@ jobs:
       #      - name: 'Update main versions'
       #        run: npx nx generate @prizm-ui/nx-plugin:update-version --updateInDependencies true --newVersion="1.*.*.up" --all --currentVersion="${{ env.LAST_V1_VERSION }}"
 
-      #      - name: Restore dist from cache
-      #      - name: Dist from cache
-      #        id: dist-cache-restore
-      #        uses: actions/cache@v3
-      #        with:
-      #          path: ./dist
-      #          key: ${{ runner.os }}-node_modules_ng_14-main-${{ hashFiles('package-lock.json.ng14') }}
-
       - name: 'Build main versions'
         run: npx nx run-many --target=build --all --parallel --max-parallel=3
 
-      - name: Save dist in cache...
+      - name: Upload dist as artifacts...
         id: dist-cache-save
-        uses: actions/cache/save@v3
+        uses: actions/upload-artifact@v3
         with:
+          name: dist
           path: ./dist
-          key: ${{ runner.os }}-node_modules_ng_14-main-${{ hashFiles('package-lock.json.ng14') }}
 
   deploy_to_doc:
     needs: build
@@ -102,11 +94,10 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node_modules_ng_14-
 
-      - name: Restore dist in cache
-        uses: actions/cache/restore@v3
+      - name: Download dist from artifact
+        uses: actions/download-artifact@v3
         with:
-          path: ./dist
-          key: ${{ runner.os }}-node_modules_ng_14-main-${{ hashFiles('package-lock.json.ng14') }}
+          name: dist
 
       - uses: actions/setup-node@v3
         with:
@@ -140,11 +131,10 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node_modules_ng_14-
 
-      - name: Restore dist in cache
-        uses: actions/cache/restore@v3
+      - name: Download dist from artifact
+        uses: actions/download-artifact@v3
         with:
-          path: ./dist
-          key: ${{ runner.os }}-node_modules_ng_14-main-${{ hashFiles('package-lock.json.ng14') }}
+          name: dist
 
       - uses: actions/setup-node@v3
         with:
@@ -168,11 +158,10 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node_modules_ng_14-
 
-      - name: Restore dist in cache
-        uses: actions/cache/restore@v3
+      - name: Download dist from artifact
+        uses: actions/download-artifact@v3
         with:
-          path: ./dist
-          key: ${{ runner.os }}-node_modules_ng_14-main-${{ hashFiles('package-lock.json.ng14') }}
+          name: dist
 
       - uses: actions/setup-node@v3
         with:
@@ -196,11 +185,10 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node_modules_ng_14-
 
-      - name: Restore dist in cache
-        uses: actions/cache/restore@v3
+      - name: Download dist from artifact
+        uses: actions/download-artifact@v3
         with:
-          path: ./dist
-          key: ${{ runner.os }}-node_modules_ng_14-main-${{ hashFiles('package-lock.json.ng14') }}
+          name: dist
 
       - uses: actions/setup-node@v3
         with:
@@ -224,11 +212,10 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node_modules_ng_14-
 
-      - name: Restore dist in cache
-        uses: actions/cache/restore@v3
+      - name: Download dist from artifact
+        uses: actions/download-artifact@v3
         with:
-          path: ./dist
-          key: ${{ runner.os }}-node_modules_ng_14-main-${{ hashFiles('package-lock.json.ng14') }}
+          name: dist
 
       - uses: actions/setup-node@v3
         with:
@@ -252,11 +239,10 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node_modules_ng_14-
 
-      - name: Restore dist in cache
-        uses: actions/cache/restore@v3
+      - name: Download dist from artifact
+        uses: actions/download-artifact@v3
         with:
-          path: ./dist
-          key: ${{ runner.os }}-node_modules_ng_14-main-${{ hashFiles('package-lock.json.ng14') }}
+          name: dist
 
       - uses: actions/setup-node@v3
         with:
@@ -280,11 +266,10 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node_modules_ng_14-
 
-      - name: Restore dist in cache
-        uses: actions/cache/restore@v3
+      - name: Download dist from artifact
+        uses: actions/download-artifact@v3
         with:
-          path: ./dist
-          key: ${{ runner.os }}-node_modules_ng_14-main-${{ hashFiles('package-lock.json.ng14') }}
+          name: dist
 
       - uses: actions/setup-node@v3
         with:
@@ -308,11 +293,10 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node_modules_ng_14-
 
-      - name: Restore dist in cache
-        uses: actions/cache/restore@v3
+      - name: Download dist from artifact
+        uses: actions/download-artifact@v3
         with:
-          path: ./dist
-          key: ${{ runner.os }}-node_modules_ng_14-main-${{ hashFiles('package-lock.json.ng14') }}
+          name: dist
 
       - uses: actions/setup-node@v3
         with:
@@ -336,11 +320,10 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node_modules_ng_14-
 
-      - name: Restore dist in cache
-        uses: actions/cache/restore@v3
+      - name: Download dist from artifact
+        uses: actions/download-artifact@v3
         with:
-          path: ./dist
-          key: ${{ runner.os }}-node_modules_ng_14-main-${{ hashFiles('package-lock.json.ng14') }}
+          name: dist
 
       - uses: actions/setup-node@v3
         with:
@@ -364,11 +347,10 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node_modules_ng_14-
 
-      - name: Restore dist in cache
-        uses: actions/cache/restore@v3
+      - name: Download dist from artifact
+        uses: actions/download-artifact@v3
         with:
-          path: ./dist
-          key: ${{ runner.os }}-node_modules_ng_14-main-${{ hashFiles('package-lock.json.ng14') }}
+          name: dist
 
       - uses: actions/setup-node@v3
         with:
@@ -392,11 +374,10 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node_modules_ng_14-
 
-      - name: Restore dist in cache
-        uses: actions/cache/restore@v3
+      - name: Download dist from artifact
+        uses: actions/download-artifact@v3
         with:
-          path: ./dist
-          key: ${{ runner.os }}-node_modules_ng_14-main-${{ hashFiles('package-lock.json.ng14') }}
+          name: dist
 
       - uses: actions/setup-node@v3
         with:
@@ -420,11 +401,10 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node_modules_ng_14-
 
-      - name: Restore dist in cache
-        uses: actions/cache/restore@v3
+      - name: Download dist from artifact
+        uses: actions/download-artifact@v3
         with:
-          path: ./dist
-          key: ${{ runner.os }}-node_modules_ng_14-main-${{ hashFiles('package-lock.json.ng14') }}
+          name: dist
 
       - uses: actions/setup-node@v3
         with:
