--- a/.github/workflows/main-publish-ng16.yml
+++ b/.github/workflows/main-publish-ng16.yml
@@ -64,25 +64,15 @@ jobs:
       - name: 'Set version 16'
         run: npx nx generate @prizm-ui/nx-mv:apply -n v16
 
-      #      - name: 'Update main versions'
-      #        run: npx nx generate @prizm-ui/nx-plugin:update-version --updateInDependencies true --newVersion="3.*.*.up" --all --currentVersion="${{ env.LAST_V3_VERSION }}"
-
-      #      - name: Dist from cache
-      #        id: dist-cache-restore
-      #        uses: actions/cache/save@v3
-      #        with:
-      #          path: dist
-      #          key: ${{ runner.os }}-node_modules_ng_16_main_release-${{ hashFiles('package-lock.json.ng16') }}
-
       - name: 'Build main versions'
         run: npx nx run-many --target=build --all --parallel --max-parallel=3
 
-      - name: Save dist in cache...
-        id: dist-cache-restore
-        uses: actions/cache/save@v3
+      - name: Upload dist as artifacts...
+        id: dist-cache-save
+        uses: actions/upload-artifact@v3
         with:
-          path: dist
-          key: ${{ runner.os }}-node_modules_ng_16_main_release-${{ hashFiles('package-lock.json.ng16') }}
+          name: dist
+          path: ./dist
 
   deploy_to_doc:
     needs: build
@@ -99,11 +89,10 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node_modules_ng_16-
 
-      - name: Restore dist in cache
-        uses: actions/cache/restore@v3
+      - uses: actions/setup-node@v3
         with:
-          path: dist
-          key: ${{ runner.os }}-node_modules_ng_16_main_release-${{ hashFiles('package-lock.json.ng16') }}
+          node-version: '18.x'
+          registry-url: 'https://registry.npmjs.org'
 
       - uses: actions/setup-node@v3
         with:
@@ -137,11 +126,10 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node_modules_ng_16-
 
-      - name: Restore dist in cache
-        uses: actions/cache/restore@v3
+      - uses: actions/setup-node@v3
         with:
-          path: dist
-          key: ${{ runner.os }}-node_modules_ng_16_main_release-${{ hashFiles('package-lock.json.ng16') }}
+          node-version: '18.x'
+          registry-url: 'https://registry.npmjs.org'
 
       - uses: actions/setup-node@v3
         with:
@@ -165,11 +153,10 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node_modules_ng_16-
 
-      - name: Restore dist in cache
-        uses: actions/cache/restore@v3
+      - uses: actions/setup-node@v3
         with:
-          path: dist
-          key: ${{ runner.os }}-node_modules_ng_16_main_release-${{ hashFiles('package-lock.json.ng16') }}
+          node-version: '18.x'
+          registry-url: 'https://registry.npmjs.org'
 
       - uses: actions/setup-node@v3
         with:
@@ -193,11 +180,10 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node_modules_ng_16-
 
-      - name: Restore dist in cache
-        uses: actions/cache/restore@v3
+      - uses: actions/setup-node@v3
         with:
-          path: dist
-          key: ${{ runner.os }}-node_modules_ng_16_main_release-${{ hashFiles('package-lock.json.ng16') }}
+          node-version: '18.x'
+          registry-url: 'https://registry.npmjs.org'
 
       - uses: actions/setup-node@v3
         with:
@@ -221,11 +207,10 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node_modules_ng_16-
 
-      - name: Restore dist in cache
-        uses: actions/cache/restore@v3
+      - uses: actions/setup-node@v3
         with:
-          path: dist
-          key: ${{ runner.os }}-node_modules_ng_16_main_release-${{ hashFiles('package-lock.json.ng16') }}
+          node-version: '18.x'
+          registry-url: 'https://registry.npmjs.org'
 
       - uses: actions/setup-node@v3
         with:
@@ -249,11 +234,10 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node_modules_ng_16-
 
-      - name: Restore dist in cache
-        uses: actions/cache/restore@v3
+      - uses: actions/setup-node@v3
         with:
-          path: dist
-          key: ${{ runner.os }}-node_modules_ng_16_main_release-${{ hashFiles('package-lock.json.ng16') }}
+          node-version: '18.x'
+          registry-url: 'https://registry.npmjs.org'
 
       - uses: actions/setup-node@v3
         with:
@@ -277,11 +261,10 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node_modules_ng_16-
 
-      - name: Restore dist in cache
-        uses: actions/cache/restore@v3
+      - uses: actions/setup-node@v3
         with:
-          path: dist
-          key: ${{ runner.os }}-node_modules_ng_16_main_release-${{ hashFiles('package-lock.json.ng16') }}
+          node-version: '18.x'
+          registry-url: 'https://registry.npmjs.org'
 
       - uses: actions/setup-node@v3
         with:
@@ -305,11 +288,10 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node_modules_ng_16-
 
-      - name: Restore dist in cache
-        uses: actions/cache/restore@v3
+      - uses: actions/setup-node@v3
         with:
-          path: dist
-          key: ${{ runner.os }}-node_modules_ng_16_main_release-${{ hashFiles('package-lock.json.ng16') }}
+          node-version: '18.x'
+          registry-url: 'https://registry.npmjs.org'
 
       - uses: actions/setup-node@v3
         with:
@@ -333,11 +315,10 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node_modules_ng_16-
 
-      - name: Restore dist in cache
-        uses: actions/cache/restore@v3
+      - uses: actions/setup-node@v3
         with:
-          path: dist
-          key: ${{ runner.os }}-node_modules_ng_16_main_release-${{ hashFiles('package-lock.json.ng16') }}
+          node-version: '18.x'
+          registry-url: 'https://registry.npmjs.org'
 
       - uses: actions/setup-node@v3
         with:
@@ -361,11 +342,10 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node_modules_ng_16-
 
-      - name: Restore dist in cache
-        uses: actions/cache/restore@v3
+      - uses: actions/setup-node@v3
         with:
-          path: dist
-          key: ${{ runner.os }}-node_modules_ng_16_main_release-${{ hashFiles('package-lock.json.ng16') }}
+          node-version: '18.x'
+          registry-url: 'https://registry.npmjs.org'
 
       - uses: actions/setup-node@v3
         with:
@@ -389,11 +369,10 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node_modules_ng_16-
 
-      - name: Restore dist in cache
-        uses: actions/cache/restore@v3
+      - uses: actions/setup-node@v3
         with:
-          path: dist
-          key: ${{ runner.os }}-node_modules_ng_16_main_release-${{ hashFiles('package-lock.json.ng16') }}
+          node-version: '18.x'
+          registry-url: 'https://registry.npmjs.org'
 
       - uses: actions/setup-node@v3
         with:
@@ -417,11 +396,10 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node_modules_ng_16-
 
-      - name: Restore dist in cache
-        uses: actions/cache/restore@v3
+      - uses: actions/setup-node@v3
         with:
-          path: dist
-          key: ${{ runner.os }}-node_modules_ng_16_main_release-${{ hashFiles('package-lock.json.ng16') }}
+          node-version: '18.x'
+          registry-url: 'https://registry.npmjs.org'
 
       - uses: actions/setup-node@v3
         with:
