ci: artifact destination folder fix

--- a/.github/workflows/main-publish-ng14.yml
+++ b/.github/workflows/main-publish-ng14.yml
@@ -98,6 +98,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: dist
+          path: ./dist
 
       - uses: actions/setup-node@v3
         with:
@@ -135,6 +136,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: dist
+          path: ./dist
 
       - uses: actions/setup-node@v3
         with:
@@ -162,6 +164,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: dist
+          path: ./dist
 
       - uses: actions/setup-node@v3
         with:
@@ -189,6 +192,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: dist
+          path: ./dist
 
       - uses: actions/setup-node@v3
         with:
@@ -216,6 +220,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: dist
+          path: ./dist
 
       - uses: actions/setup-node@v3
         with:
@@ -243,6 +248,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: dist
+          path: ./dist
 
       - uses: actions/setup-node@v3
         with:
@@ -270,6 +276,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: dist
+          path: ./dist
 
       - uses: actions/setup-node@v3
         with:
@@ -297,6 +304,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: dist
+          path: ./dist
 
       - uses: actions/setup-node@v3
         with:
@@ -324,6 +332,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: dist
+          path: ./dist
 
       - uses: actions/setup-node@v3
         with:
@@ -351,6 +360,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: dist
+          path: ./dist
 
       - uses: actions/setup-node@v3
         with:
@@ -378,6 +388,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: dist
+          path: ./dist
 
       - uses: actions/setup-node@v3
         with:
@@ -405,6 +416,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: dist
+          path: ./dist
 
       - uses: actions/setup-node@v3
         with:
