--- a/.github/workflows/main-publish-ng15.yml
+++ b/.github/workflows/main-publish-ng15.yml
@@ -93,6 +93,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: dist
+          path: ./dist
 
       - uses: actions/setup-node@v3
         with:
@@ -130,6 +131,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: dist
+          path: ./dist
 
       - uses: actions/setup-node@v3
         with:
@@ -157,6 +159,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: dist
+          path: ./dist
 
       - uses: actions/setup-node@v3
         with:
@@ -184,6 +187,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: dist
+          path: ./dist
 
       - uses: actions/setup-node@v3
         with:
@@ -211,6 +215,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: dist
+          path: ./dist
 
       - uses: actions/setup-node@v3
         with:
@@ -238,6 +243,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: dist
+          path: ./dist
 
       - uses: actions/setup-node@v3
         with:
@@ -265,6 +271,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: dist
+          path: ./dist
 
       - uses: actions/setup-node@v3
         with:
@@ -292,6 +299,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: dist
+          path: ./dist
 
       - uses: actions/setup-node@v3
         with:
@@ -319,6 +327,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: dist
+          path: ./dist
 
       - uses: actions/setup-node@v3
         with:
@@ -346,6 +355,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: dist
+          path: ./dist
 
       - uses: actions/setup-node@v3
         with:
@@ -373,6 +383,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: dist
+          path: ./dist
 
       - uses: actions/setup-node@v3
         with:
@@ -400,6 +411,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: dist
+          path: ./dist
 
       - uses: actions/setup-node@v3
         with:
