--- a/.github/workflows/main-publish-ng16.yml
+++ b/.github/workflows/main-publish-ng16.yml
@@ -94,11 +94,6 @@ jobs:
           node-version: '18.x'
           registry-url: 'https://registry.npmjs.org'
 
-      - uses: actions/setup-node@v3
-        with:
-          node-version: '18.x'
-          registry-url: 'https://registry.npmjs.org'
-
       - name: 'Build doc app for firebase hosting'
         run: npm run build:doc
 
@@ -131,10 +126,11 @@ jobs:
           node-version: '18.x'
           registry-url: 'https://registry.npmjs.org'
 
-      - uses: actions/setup-node@v3
+      - name: Download dist from artifact
+        uses: actions/download-artifact@v3
         with:
-          node-version: '18.x'
-          registry-url: 'https://registry.npmjs.org'
+          name: dist
+          path: ./dist
 
       - run: cd dist/libs/components && npm publish --access public --verbose
 
@@ -158,10 +154,11 @@ jobs:
           node-version: '18.x'
           registry-url: 'https://registry.npmjs.org'
 
-      - uses: actions/setup-node@v3
+      - name: Download dist from artifact
+        uses: actions/download-artifact@v3
         with:
-          node-version: '18.x'
-          registry-url: 'https://registry.npmjs.org'
+          name: dist
+          path: ./dist
 
       - run: cd dist/libs/i18n && npm publish --access public --verbose
 
@@ -185,10 +182,11 @@ jobs:
           node-version: '18.x'
           registry-url: 'https://registry.npmjs.org'
 
-      - uses: actions/setup-node@v3
+      - name: Download dist from artifact
+        uses: actions/download-artifact@v3
         with:
-          node-version: '18.x'
-          registry-url: 'https://registry.npmjs.org'
+          name: dist
+          path: ./dist
 
       - run: cd dist/libs/helpers && npm publish --access public --verbose
 
@@ -212,10 +210,11 @@ jobs:
           node-version: '18.x'
           registry-url: 'https://registry.npmjs.org'
 
-      - uses: actions/setup-node@v3
+      - name: Download dist from artifact
+        uses: actions/download-artifact@v3
         with:
-          node-version: '18.x'
-          registry-url: 'https://registry.npmjs.org'
+          name: dist
+          path: ./dist
 
       - run: cd dist/libs/core && npm publish --access public --verbose
 
@@ -239,10 +238,11 @@ jobs:
           node-version: '18.x'
           registry-url: 'https://registry.npmjs.org'
 
-      - uses: actions/setup-node@v3
+      - name: Download dist from artifact
+        uses: actions/download-artifact@v3
         with:
-          node-version: '18.x'
-          registry-url: 'https://registry.npmjs.org'
+          name: dist
+          path: ./dist
 
       - run: cd dist/libs/theme && npm publish --access public --verbose
 
@@ -266,10 +266,11 @@ jobs:
           node-version: '18.x'
           registry-url: 'https://registry.npmjs.org'
 
-      - uses: actions/setup-node@v3
+      - name: Download dist from artifact
+        uses: actions/download-artifact@v3
         with:
-          node-version: '18.x'
-          registry-url: 'https://registry.npmjs.org'
+          name: dist
+          path: ./dist
 
       - run: cd dist/libs/icons/base && npm publish --access public --verbose
 
@@ -293,10 +294,11 @@ jobs:
           node-version: '18.x'
           registry-url: 'https://registry.npmjs.org'
 
-      - uses: actions/setup-node@v3
+      - name: Download dist from artifact
+        uses: actions/download-artifact@v3
         with:
-          node-version: '18.x'
-          registry-url: 'https://registry.npmjs.org'
+          name: dist
+          path: ./dist
 
       - run: cd dist/libs/icons/flags && npm publish --access public --verbose
 
@@ -320,10 +322,11 @@ jobs:
           node-version: '18.x'
           registry-url: 'https://registry.npmjs.org'
 
-      - uses: actions/setup-node@v3
+      - name: Download dist from artifact
+        uses: actions/download-artifact@v3
         with:
-          node-version: '18.x'
-          registry-url: 'https://registry.npmjs.org'
+          name: dist
+          path: ./dist
 
       - run: cd dist/libs/plugin && npm publish --access public --verbose
 
@@ -347,10 +350,11 @@ jobs:
           node-version: '18.x'
           registry-url: 'https://registry.npmjs.org'
 
-      - uses: actions/setup-node@v3
+      - name: Download dist from artifact
+        uses: actions/download-artifact@v3
         with:
-          node-version: '18.x'
-          registry-url: 'https://registry.npmjs.org'
+          name: dist
+          path: ./dist
 
       - run: cd dist/libs/ast && npm publish --access public --verbose
 
@@ -374,10 +378,11 @@ jobs:
           node-version: '18.x'
           registry-url: 'https://registry.npmjs.org'
 
-      - uses: actions/setup-node@v3
+      - name: Download dist from artifact
+        uses: actions/download-artifact@v3
         with:
-          node-version: '18.x'
-          registry-url: 'https://registry.npmjs.org'
+          name: dist
+          path: ./dist
 
       - run: cd dist/libs/charts && npm publish --access public --verbose
 
@@ -401,9 +406,10 @@ jobs:
           node-version: '18.x'
           registry-url: 'https://registry.npmjs.org'
 
-      - uses: actions/setup-node@v3
+      - name: Download dist from artifact
+        uses: actions/download-artifact@v3
         with:
-          node-version: '18.x'
-          registry-url: 'https://registry.npmjs.org'
+          name: dist
+          path: ./dist
 
       - run: cd dist/libs/nxmv && npm publish --access public --verbose
