--- a/.github/workflows/beta-publish-ng16.yml
+++ b/.github/workflows/beta-publish-ng16.yml
@@ -95,6 +95,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: dist
+          path: ./dist
 
       - uses: actions/setup-node@v3
         with:
@@ -131,6 +132,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: dist
+          path: ./dist
 
       - uses: actions/setup-node@v3
         with:
@@ -157,6 +159,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: dist
+          path: ./dist
 
       - uses: actions/setup-node@v3
         with:
@@ -183,6 +186,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: dist
+          path: ./dist
 
       - uses: actions/setup-node@v3
         with:
@@ -208,6 +212,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: dist
+          path: ./dist
 
       - uses: actions/setup-node@v3
         with:
@@ -234,6 +239,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: dist
+          path: ./dist
 
       - uses: actions/setup-node@v3
         with:
@@ -260,6 +266,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: dist
+          path: ./dist
 
       - uses: actions/setup-node@v3
         with:
@@ -286,6 +293,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: dist
+          path: ./dist
 
       - uses: actions/setup-node@v3
         with:
@@ -312,6 +320,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: dist
+          path: ./dist
 
       - uses: actions/setup-node@v3
         with:
@@ -338,6 +347,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: dist
+          path: ./dist
 
       - uses: actions/setup-node@v3
         with:
@@ -364,6 +374,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: dist
+          path: ./dist
 
       - uses: actions/setup-node@v3
         with:
@@ -390,6 +401,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: dist
+          path: ./dist
 
       - uses: actions/setup-node@v3
         with:
