--- a/apps/doc/src/app/code-demo/files/src/app/shared.module.ts.template
+++ b/apps/doc/src/app/code-demo/files/src/app/shared.module.ts.template
@@ -1,5 +1,5 @@
 import { NgModule } from '@angular/core';
-import { PrizmIconsSvgModule } from '@prizm-ui/icons';
+import { PrizmIconsSvgComponent } from '@prizm-ui/icons';
 import {
   PrizmAccordionModule,
   PrizmBreadcrumbsModule,
@@ -106,7 +106,7 @@ import {
     PrizmFileUploadModule,
     PrizmGridModule,
     PrizmHintModule,
-    PrizmIconsSvgModule,
+    PrizmIconsSvgComponent,
     PrizmIndicatorModule,
     PrizmInputMultiSelectModule,
     PrizmInputLayoutDateTimeModule,
@@ -174,7 +174,7 @@ import {
     PrizmMultiSelectModule,
   ],
   exports: [
-    PrizmIconsSvgModule,
+    PrizmIconsSvgComponent,
 
     PrizmButtonModule,
     PrizmAccordionModule,
