--- a/.github/workflows/beta-released.yml
+++ b/.github/workflows/beta-released.yml
@@ -6,18 +6,23 @@ env:
   npmrc_config_push: ${{ secrets.NPMRC_CONFIG_PUSH }}
   NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_PUBLISH_TOKEN }}
 jobs:
-  pre_beta_release_v3:
+  pre_beta_release_v4:
     if: ${{ always() }}
-    uses: zyfra/Prizm/.github/workflows/beta-publish-ng16.yml@main
+    uses: zyfra/Prizm/.github/workflows/beta-publish-ng17.yml@main
     secrets: inherit
 
-  pre_beta_release_v2:
-    needs: pre_beta_release_v3
-    if: ${{ always() }}
-    uses: zyfra/Prizm/.github/workflows/beta-publish-ng15.yml@main
-    secrets: inherit
-
-  pre_beta_release_v1:
-    needs: pre_beta_release_v2
-    uses: zyfra/Prizm/.github/workflows/beta-publish-ng14.yml@main
-    secrets: inherit
+#  pre_beta_release_v3:
+#    if: ${{ always() }}
+#    uses: zyfra/Prizm/.github/workflows/beta-publish-ng16.yml@main
+#    secrets: inherit
+#
+#  pre_beta_release_v2:
+#    needs: pre_beta_release_v3
+#    if: ${{ always() }}
+#    uses: zyfra/Prizm/.github/workflows/beta-publish-ng15.yml@main
+#    secrets: inherit
+#
+#  pre_beta_release_v1:
+#    needs: pre_beta_release_v2
+#    uses: zyfra/Prizm/.github/workflows/beta-publish-ng14.yml@main
+#    secrets: inherit
