--- a/.github/workflows/pre-release-publish-ng17.yml
+++ b/.github/workflows/pre-release-publish-ng17.yml
@@ -1,5 +1,5 @@
 # TODO: later change tag by input variable ${{ inputs.tag }}
-name: Publish main packages 16
+name: Publish next packages 17
 on:
   workflow_dispatch:
   workflow_call:
@@ -29,14 +29,14 @@ jobs:
         uses: actions/cache/restore@v3
         with:
           path: ./node_modules
-          key: ${{ runner.os }}-node_modules_ng_16-${{ hashFiles('package-lock.json.ng16') }}
+          key: ${{ runner.os }}-node_modules_ng_17-${{ hashFiles('package-lock.json.ng17') }}
           restore-keys: |
-            ${{ runner.os }}-node_modules_ng_16-
+            ${{ runner.os }}-node_modules_ng_17-
 
-      - name: 'Initial changes 16'
+      - name: 'Initial changes 17'
         run: |
-          cp -f package.json.ng16 package.json
-          cp -f package-lock.json.ng16 package-lock.json
+          cp -f package.json.ng17 package.json
+          cp -f package-lock.json.ng17 package-lock.json
 
       - name: Install dependencies
         if: steps.cache-restore.outputs.cache-hit != 'true'
@@ -56,15 +56,18 @@ jobs:
 
       - name: Set up environment variables
         run: |
-          last_v3_version=$(
-            echo '3.9.0'
+          last_next_version=$(
+            (npm view @prizm-ui/components versions --tag next --json 2>/dev/null || echo '3.9.0-next.0') | jq '([.[] | select(startswith("3.9.0-next"))] | last // "3.9.0-next.0")' 2>/dev/null || echo '3.9.0-next.0'
           )
-          echo "LAST_V3_VERSION=${last_v3_version}" >> $GITHUB_ENV
+          echo "LAST_NEXT_VERSION=${last_next_version}" >> $GITHUB_ENV
 
-      - name: 'Set version 16'
-        run: npx nx generate @prizm-ui/nx-mv:apply -n v16
+      - name: 'Set version 17'
+        run: npx nx generate @prizm-ui/nx-mv:apply -n v17
 
-      - name: 'Build main versions'
+      - name: 'Update next versions'
+        run: npx nx generate @prizm-ui/nx-plugin:update-version --updateInDependencies true --newVersion="3.*.*-next.up" --all --currentVersion="${{ env.LAST_NEXT_VERSION }}"
+
+      - name: 'Build next versions'
         run: npx nx run-many --target=build --all --parallel --max-parallel=3
 
       - name: Upload dist as artifacts...
@@ -79,15 +82,20 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
+
       - name: Restore node_modules in cache
         uses: actions/cache/restore@v3
         with:
           path: ./node_modules
-          key: ${{ runner.os }}-node_modules_ng_16-${{ hashFiles('package-lock.json.ng16') }}
+          key: ${{ runner.os }}-node_modules_ng_17-${{ hashFiles('package-lock.json.ng17') }}
           restore-keys: |
-            ${{ runner.os }}-node_modules_ng_16-
+            ${{ runner.os }}-node_modules_ng_17-
+
+      - name: Download dist from artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: dist
+          path: ./dist
 
       - uses: actions/setup-node@v3
         with:
@@ -104,27 +112,21 @@ jobs:
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_PRIZMUI }}'
           projectId: prizmui
           channelId: live
-          target: main
+          target: v3-next
 
   publish-components:
     needs: build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
+
       - name: Restore node_modules in cache
         uses: actions/cache/restore@v3
         with:
           path: ./node_modules
-          key: ${{ runner.os }}-node_modules_ng_16-${{ hashFiles('package-lock.json.ng16') }}
+          key: ${{ runner.os }}-node_modules_ng_17-${{ hashFiles('package-lock.json.ng17') }}
           restore-keys: |
-            ${{ runner.os }}-node_modules_ng_16-
-
-      - uses: actions/setup-node@v3
-        with:
-          node-version: '18.x'
-          registry-url: 'https://registry.npmjs.org'
+            ${{ runner.os }}-node_modules_ng_17-
 
       - name: Download dist from artifact
         uses: actions/download-artifact@v3
@@ -132,27 +134,26 @@ jobs:
           name: dist
           path: ./dist
 
-      - run: cd dist/libs/components && npm publish --access public --verbose
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '18.x'
+          registry-url: 'https://registry.npmjs.org'
+
+      - run: cd dist/libs/components && npm publish --tag next --access public --verbose
 
   publish-i18n:
     needs: build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
+
       - name: Restore node_modules in cache
         uses: actions/cache/restore@v3
         with:
           path: ./node_modules
-          key: ${{ runner.os }}-node_modules_ng_16-${{ hashFiles('package-lock.json.ng16') }}
+          key: ${{ runner.os }}-node_modules_ng_17-${{ hashFiles('package-lock.json.ng17') }}
           restore-keys: |
-            ${{ runner.os }}-node_modules_ng_16-
-
-      - uses: actions/setup-node@v3
-        with:
-          node-version: '18.x'
-          registry-url: 'https://registry.npmjs.org'
+            ${{ runner.os }}-node_modules_ng_17-
 
       - name: Download dist from artifact
         uses: actions/download-artifact@v3
@@ -160,27 +161,26 @@ jobs:
           name: dist
           path: ./dist
 
-      - run: cd dist/libs/i18n && npm publish --access public --verbose
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '18.x'
+          registry-url: 'https://registry.npmjs.org'
+
+      - run: cd dist/libs/i18n && npm publish --tag next --access public --verbose
 
   publish-helpers:
     needs: build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
+
       - name: Restore node_modules in cache
         uses: actions/cache/restore@v3
         with:
           path: ./node_modules
-          key: ${{ runner.os }}-node_modules_ng_16-${{ hashFiles('package-lock.json.ng16') }}
+          key: ${{ runner.os }}-node_modules_ng_17-${{ hashFiles('package-lock.json.ng17') }}
           restore-keys: |
-            ${{ runner.os }}-node_modules_ng_16-
-
-      - uses: actions/setup-node@v3
-        with:
-          node-version: '18.x'
-          registry-url: 'https://registry.npmjs.org'
+            ${{ runner.os }}-node_modules_ng_17-
 
       - name: Download dist from artifact
         uses: actions/download-artifact@v3
@@ -188,27 +188,25 @@ jobs:
           name: dist
           path: ./dist
 
-      - run: cd dist/libs/helpers && npm publish --access public --verbose
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '18.x'
+          registry-url: 'https://registry.npmjs.org'
+
+      - run: cd dist/libs/helpers && npm publish --tag next --access public --verbose
 
   publish-core:
     needs: build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
       - name: Restore node_modules in cache
         uses: actions/cache/restore@v3
         with:
           path: ./node_modules
-          key: ${{ runner.os }}-node_modules_ng_16-${{ hashFiles('package-lock.json.ng16') }}
+          key: ${{ runner.os }}-node_modules_ng_17-${{ hashFiles('package-lock.json.ng17') }}
           restore-keys: |
-            ${{ runner.os }}-node_modules_ng_16-
-
-      - uses: actions/setup-node@v3
-        with:
-          node-version: '18.x'
-          registry-url: 'https://registry.npmjs.org'
+            ${{ runner.os }}-node_modules_ng_17-
 
       - name: Download dist from artifact
         uses: actions/download-artifact@v3
@@ -216,27 +214,26 @@ jobs:
           name: dist
           path: ./dist
 
-      - run: cd dist/libs/core && npm publish --access public --verbose
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '18.x'
+          registry-url: 'https://registry.npmjs.org'
+
+      - run: cd dist/libs/core && npm publish --tag next --access public --verbose
 
   publish-theme:
     needs: build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
+
       - name: Restore node_modules in cache
         uses: actions/cache/restore@v3
         with:
           path: ./node_modules
-          key: ${{ runner.os }}-node_modules_ng_16-${{ hashFiles('package-lock.json.ng16') }}
+          key: ${{ runner.os }}-node_modules_ng_17-${{ hashFiles('package-lock.json.ng17') }}
           restore-keys: |
-            ${{ runner.os }}-node_modules_ng_16-
-
-      - uses: actions/setup-node@v3
-        with:
-          node-version: '18.x'
-          registry-url: 'https://registry.npmjs.org'
+            ${{ runner.os }}-node_modules_ng_17-
 
       - name: Download dist from artifact
         uses: actions/download-artifact@v3
@@ -244,27 +241,26 @@ jobs:
           name: dist
           path: ./dist
 
-      - run: cd dist/libs/theme && npm publish --access public --verbose
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '18.x'
+          registry-url: 'https://registry.npmjs.org'
+
+      - run: cd dist/libs/theme && npm publish --tag next --access public --verbose
 
   publish-icons:
     needs: build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
+
       - name: Restore node_modules in cache
         uses: actions/cache/restore@v3
         with:
           path: ./node_modules
-          key: ${{ runner.os }}-node_modules_ng_16-${{ hashFiles('package-lock.json.ng16') }}
+          key: ${{ runner.os }}-node_modules_ng_17-${{ hashFiles('package-lock.json.ng17') }}
           restore-keys: |
-            ${{ runner.os }}-node_modules_ng_16-
-
-      - uses: actions/setup-node@v3
-        with:
-          node-version: '18.x'
-          registry-url: 'https://registry.npmjs.org'
+            ${{ runner.os }}-node_modules_ng_17-
 
       - name: Download dist from artifact
         uses: actions/download-artifact@v3
@@ -272,27 +268,26 @@ jobs:
           name: dist
           path: ./dist
 
-      - run: cd dist/libs/icons/base && npm publish --access public --verbose
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '18.x'
+          registry-url: 'https://registry.npmjs.org'
+
+      - run: cd dist/libs/icons/base && npm publish --tag next --access public --verbose
 
   publish-flags:
     needs: build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
+
       - name: Restore node_modules in cache
         uses: actions/cache/restore@v3
         with:
           path: ./node_modules
-          key: ${{ runner.os }}-node_modules_ng_16-${{ hashFiles('package-lock.json.ng16') }}
+          key: ${{ runner.os }}-node_modules_ng_17-${{ hashFiles('package-lock.json.ng17') }}
           restore-keys: |
-            ${{ runner.os }}-node_modules_ng_16-
-
-      - uses: actions/setup-node@v3
-        with:
-          node-version: '18.x'
-          registry-url: 'https://registry.npmjs.org'
+            ${{ runner.os }}-node_modules_ng_17-
 
       - name: Download dist from artifact
         uses: actions/download-artifact@v3
@@ -300,27 +295,26 @@ jobs:
           name: dist
           path: ./dist
 
-      - run: cd dist/libs/icons/flags && npm publish --access public --verbose
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '18.x'
+          registry-url: 'https://registry.npmjs.org'
+
+      - run: cd dist/libs/icons/flags && npm publish --tag next --access public --verbose
 
   publish-plugin:
     needs: build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
+
       - name: Restore node_modules in cache
         uses: actions/cache/restore@v3
         with:
           path: ./node_modules
-          key: ${{ runner.os }}-node_modules_ng_16-${{ hashFiles('package-lock.json.ng16') }}
+          key: ${{ runner.os }}-node_modules_ng_17-${{ hashFiles('package-lock.json.ng17') }}
           restore-keys: |
-            ${{ runner.os }}-node_modules_ng_16-
-
-      - uses: actions/setup-node@v3
-        with:
-          node-version: '18.x'
-          registry-url: 'https://registry.npmjs.org'
+            ${{ runner.os }}-node_modules_ng_17-
 
       - name: Download dist from artifact
         uses: actions/download-artifact@v3
@@ -328,27 +322,26 @@ jobs:
           name: dist
           path: ./dist
 
-      - run: cd dist/libs/plugin && npm publish --access public --verbose
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '18.x'
+          registry-url: 'https://registry.npmjs.org'
+
+      - run: cd dist/libs/plugin && npm publish --tag next --access public --verbose
 
   publish-ast:
     needs: build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
+
       - name: Restore node_modules in cache
         uses: actions/cache/restore@v3
         with:
           path: ./node_modules
-          key: ${{ runner.os }}-node_modules_ng_16-${{ hashFiles('package-lock.json.ng16') }}
+          key: ${{ runner.os }}-node_modules_ng_17-${{ hashFiles('package-lock.json.ng17') }}
           restore-keys: |
-            ${{ runner.os }}-node_modules_ng_16-
-
-      - uses: actions/setup-node@v3
-        with:
-          node-version: '18.x'
-          registry-url: 'https://registry.npmjs.org'
+            ${{ runner.os }}-node_modules_ng_17-
 
       - name: Download dist from artifact
         uses: actions/download-artifact@v3
@@ -356,27 +349,26 @@ jobs:
           name: dist
           path: ./dist
 
-      - run: cd dist/libs/ast && npm publish --access public --verbose
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '18.x'
+          registry-url: 'https://registry.npmjs.org'
+
+      - run: cd dist/libs/ast && npm publish --tag next --access public --verbose
 
   publish-charts:
     needs: build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
+
       - name: Restore node_modules in cache
         uses: actions/cache/restore@v3
         with:
           path: ./node_modules
-          key: ${{ runner.os }}-node_modules_ng_16-${{ hashFiles('package-lock.json.ng16') }}
+          key: ${{ runner.os }}-node_modules_ng_17-${{ hashFiles('package-lock.json.ng17') }}
           restore-keys: |
-            ${{ runner.os }}-node_modules_ng_16-
-
-      - uses: actions/setup-node@v3
-        with:
-          node-version: '18.x'
-          registry-url: 'https://registry.npmjs.org'
+            ${{ runner.os }}-node_modules_ng_17-
 
       - name: Download dist from artifact
         uses: actions/download-artifact@v3
@@ -384,27 +376,26 @@ jobs:
           name: dist
           path: ./dist
 
-      - run: cd dist/libs/charts && npm publish --access public --verbose
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '18.x'
+          registry-url: 'https://registry.npmjs.org'
+
+      - run: cd dist/libs/charts && npm publish --tag next --access public --verbose
 
   publish-nxmv:
     needs: build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
+
       - name: Restore node_modules in cache
         uses: actions/cache/restore@v3
         with:
           path: ./node_modules
-          key: ${{ runner.os }}-node_modules_ng_16-${{ hashFiles('package-lock.json.ng16') }}
+          key: ${{ runner.os }}-node_modules_ng_17-${{ hashFiles('package-lock.json.ng17') }}
           restore-keys: |
-            ${{ runner.os }}-node_modules_ng_16-
-
-      - uses: actions/setup-node@v3
-        with:
-          node-version: '18.x'
-          registry-url: 'https://registry.npmjs.org'
+            ${{ runner.os }}-node_modules_ng_17-
 
       - name: Download dist from artifact
         uses: actions/download-artifact@v3
@@ -412,4 +403,9 @@ jobs:
           name: dist
           path: ./dist
 
-      - run: cd dist/libs/nxmv && npm publish --access public --verbose
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '18.x'
+          registry-url: 'https://registry.npmjs.org'
+
+      - run: cd dist/libs/nxmv && npm publish --tag next --access public --verbose
