--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@prizm-ui/sdk",
-  "version": "3.9.0",
+  "version": "4.0.0",
   "license": "MIT",
   "husky": {
     "hooks": {
@@ -42,17 +42,17 @@
   "private": true,
   "dependencies": {
     "@angular-extensions/svg-icons-builder": "^3.0.0",
-    "@angular/animations": "17.0.9",
-    "@angular/cdk": "17.0.5",
-    "@angular/common": "17.0.9",
-    "@angular/compiler": "17.0.9",
-    "@angular/core": "17.0.9",
-    "@angular/forms": "17.0.9",
-    "@angular/localize": "17.0.9",
-    "@angular/platform-browser": "17.0.9",
-    "@angular/platform-browser-dynamic": "17.0.9",
-    "@angular/router": "17.0.9",
-    "@antv/g2plot": "^2.4.22",
+    "@angular/animations": "^17.1.0",
+    "@angular/cdk": "^17.1.0",
+    "@angular/common": "^17.1.0",
+    "@angular/compiler": "^17.1.0",
+    "@angular/core": "^17.1.0",
+    "@angular/forms": "^17.1.0",
+    "@angular/localize": "^17.1.0",
+    "@angular/platform-browser": "^17.1.0",
+    "@angular/platform-browser-dynamic": "^17.1.0",
+    "@angular/router": "^17.1.0",
+    "@antv/g2plot": "^2.4.31",
     "@compodoc/compodoc": "^1.1.15",
     "@ng-web-apis/common": "^3.0.0",
     "@ng-web-apis/intersection-observer": "^3.0.0",
@@ -98,8 +98,8 @@
     "@angular-eslint/eslint-plugin-template": "17.0.1",
     "@angular-eslint/template-parser": "17.0.1",
     "@angular/cli": "~17.0.0",
-    "@angular/compiler-cli": "17.0.9",
-    "@angular/language-service": "17.0.9",
+    "@angular/compiler-cli": "^17.1.0",
+    "@angular/language-service": "^17.1.0",
     "@commitlint/cli": "^17.4.2",
     "@commitlint/config-conventional": "^17.4.2",
     "@nikolastojicic/prettier-plugin-organize-attributes": "^0.1.0",
