--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@nrwl/angular": "17.2.8",
     "@nrwl/nx-plugin": "17.2.8",
     "@stackblitz/sdk": "^1.9.0",
+    "@swc/helpers": "^0.5.3",
     "@taiga-ui/addon-doc": "^3.13.0",
     "@taiga-ui/addon-mobile": "^3.13.0",
     "@taiga-ui/cdk": "^3.13.0",
