--- a/package.json
+++ b/package.json
@@ -112,7 +112,7 @@
     "@nrwl/linter": "17.2.8",
     "@nrwl/node": "17.2.8",
     "@nrwl/workspace": "17.2.8",
-    "@prizm-ui/nx-mv": "^4.0.0-beta.2",
+    "@prizm-ui/nx-mv": "^4.0.0-next.1",
     "@schematics/angular": "17.0.10",
     "@swc-node/register": "1.6.8",
     "@swc/core": "1.3.104",
