--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
     "@ng-web-apis/intersection-observer": "^3.0.0",
     "@ng-web-apis/mutation-observer": "^3.0.0",
     "@ng-web-apis/resize-observer": "^3.0.0",
+    "@ngneat/elf": "^2.5.0",
+    "@ngneat/elf-persist-state": "^1.2.0",
     "@nrwl/angular": "17.2.8",
     "@nrwl/nx-plugin": "17.2.8",
     "@stackblitz/sdk": "^1.9.0",
