fix: nrwl to nx

--- a/package.json
+++ b/package.json
@@ -60,8 +60,8 @@
     "@ng-web-apis/resize-observer": "^3.0.0",
     "@ngneat/elf": "^2.5.0",
     "@ngneat/elf-persist-state": "^1.2.0",
-    "@nrwl/angular": "17.2.8",
-    "@nrwl/nx-plugin": "17.2.8",
+    "@nx/angular": "17.2.8",
+    "@nx/nx-plugin": "17.2.8",
     "@stackblitz/sdk": "^1.9.0",
     "@swc/helpers": "^0.5.3",
     "@taiga-ui/addon-doc": "^3.13.0",
@@ -106,14 +106,14 @@
     "@commitlint/cli": "^17.4.2",
     "@commitlint/config-conventional": "^17.4.2",
     "@nikolastojicic/prettier-plugin-organize-attributes": "^0.1.0",
-    "@nrwl/cypress": "17.2.8",
-    "@nrwl/devkit": "17.2.8",
+    "@nx/cypress": "17.2.8",
+    "@nx/devkit": "17.2.8",
     "@nrwl/eslint-plugin-nx": "17.2.8",
-    "@nrwl/jest": "17.2.8",
-    "@nrwl/js": "17.2.8",
-    "@nrwl/linter": "17.2.8",
-    "@nrwl/node": "17.2.8",
-    "@nrwl/workspace": "17.2.8",
+    "@nx/jest": "17.2.8",
+    "@nx/js": "17.2.8",
+    "@nx/linter": "17.2.8",
+    "@nx/node": "17.2.8",
+    "@nx/workspace": "17.2.8",
     "@prizm-ui/nx-mv": "^4.0.0-next.1",
     "@schematics/angular": "17.0.10",
     "@swc-node/register": "1.6.8",
