--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,6 +4,11 @@
   "plugins": ["@nrwl/nx", "@typescript-eslint"],
   "overrides": [
     {
+      "files": "*.json",
+      "parser": "jsonc-eslint-parser",
+      "rules": {}
+    },
+    {
       "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
       "rules": {
         "@nrwl/nx/enforce-module-boundaries": [
