--- a/local/project.json
+++ b/local/project.json
@@ -1,35 +1,35 @@
 {
   "name": "local",
-  "$schema": "../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "libs/local/src",
+  "$schema": "../node_modules/nx/schemas/project-schema.json",
+  "sourceRoot": "local/src",
   "projectType": "library",
   "targets": {
     "build": {
       "executor": "@nx/js:tsc",
       "outputs": ["{options.outputPath}"],
       "options": {
-        "outputPath": "dist/libs/local",
-        "main": "libs/local/src/index.ts",
-        "tsConfig": "libs/local/tsconfig.lib.json",
+        "outputPath": "dist/local",
+        "main": "local/src/index.ts",
+        "tsConfig": "local/tsconfig.lib.json",
         "assets": [
-          "libs/local/*.md",
+          "local/*.md",
           {
-            "input": "./libs/local/src",
+            "input": "./local/src",
             "glob": "**/!(*.ts)",
             "output": "./src"
           },
           {
-            "input": "./libs/local/src",
+            "input": "./local/src",
             "glob": "**/*.d.ts",
             "output": "./src"
           },
           {
-            "input": "./libs/local",
+            "input": "./local",
             "glob": "generators.json",
             "output": "."
           },
           {
-            "input": "./libs/local",
+            "input": "./local",
             "glob": "executors.json",
             "output": "."
           }
@@ -44,8 +44,12 @@
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "libs/local/jest.config.ts"
+        "jestConfig": "local/jest.config.ts"
       }
+    },
+    "icons-to-lazy": {
+      "executor": "local:icons-to-lazy",
+      "options": {}
     }
   },
   "tags": []
