--- a/package.json
+++ b/package.json
@@ -160,6 +160,7 @@
     "pretty-quick": "^3.1.3",
     "raw-loader": "^4.0.2",
     "svg-to-ts": "^8.9.0",
+    "svgtofont": "^4.1.1",
     "tar-stream": "~2.2.0",
     "ts-jest": "29.1.1",
     "ts-node": "10.9.1",
